@@ -26,8 +26,8 @@ body.admin-menu { margin-top: 20px !important; }
 #admin-menu li li { width: 160px; background: #202020; filter:Alpha(opacity=88); opacity: 0.88; }
 
 /* second-level lists */
-/* using left instead of display to hide menus because display: none isn't read by screen readers */
-#admin-menu li ul { position: absolute; background: none; margin: 0; width: 160px; left: -999em; line-height: 1.2em; }
+/* Note: Use left instead of display to hide publicly visible menus because display: none isn't read by screen readers */
+#admin-menu li ul { position: absolute; background: none; margin: 0; width: 160px; left: -999em; display: none; line-height: 1.2em; }
 
 /* third-and-above-level lists */
 #admin-menu li li.expandable ul { margin: -20px 0 0 160px; }
@@ -41,6 +41,7 @@ body.admin-menu { margin-top: 20px !important; }
 #admin-menu li.sfhover ul ul ul ul,
 #admin-menu li.sfhover ul ul ul ul ul {
   left: -999em;
+  display: none;
 }
 
 /* lists nested under hovered list items */
@@ -55,6 +56,7 @@ body.admin-menu { margin-top: 20px !important; }
 #admin-menu li li li li.sfhover ul,
 #admin-menu li li li li li.sfhover ul {
   left: auto;
+  display: block;
 }
 #admin-menu li.admin-menu-action:hover ul {
   right: 0;
