@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#242377 by sun: Fixed sub-level menu items exceed total document height.
 
 
 Admin Menu 6.x-1.0, 2008-06-26
